# dice-commands

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  spelling_wordlist.txt
sandbox/: startd_history_info.py
src/dice_cli/: __init__.py  _date.py  cache.py  dicectl.py  logger.py  main.py  utils.py
src/dice_cli/_io/: __init__.py  _csv.py  _remote.py
src/dice_cli/admin/: __init__.py  _print_unused_id_ranges.py  _print_used_id_ranges.py  _scan_groups_and_users.py
src/dice_cli/admin/deploy/: __init__.py  _hdfs_mount.py
src/dice_cli/admin/investigate/: __init__.py
src/dice_cli/admin/report/: __init__.py  _dns.py  _inventory.py  _network.py  _resources.py  _storage.py
src/dice_cli/benchmark/: __init__.py
src/dice_cli/check/: __init__.py  _environment.py
src/dice_cli/docs/: __init__.py
src/dice_cli/fs/: __init__.py
src/dice_cli/info/: __init__.py
src/dice_cli/job/: __init__.py
src/dice_cli/sync/: __init__.py
src/dice_commands/: dice.py  logger.py  utils.py
src/dice_commands/_io/: __init__.py
src/dice_commands/admin/: __init__.py  _print_unused_id_ranges.py  _print_used_id_ranges.py  _scan_groups_and_users.py
src/dice_commands/benchmark/: __init__.py
src/dice_commands/docs/: __init__.py
src/dice_commands/fs/: __init__.py
src/dice_commands/io/: __init__.py  _csv.py
src/dice_commands/job/: __init__.py
src/dice_commands/user/: __init__.py  copy_from_local.py
tests/: test_package.py
usr/sbin/: print_unused_id_ranges.py  print_used_id_ranges.py  scan_groups_and_users.py
