[build-system]
requires = ["flit_core >=3.3"]
build-backend = "flit_core.buildapi"


[project]
name = "dice_cli"
authors = [
  { name = "Luke Kreczko", email = "kreczko@cern.ch" },
]
maintainers = [
  { name = "The UoB DICE team", email = "lcg-admin@bristol.ac.uk" },
]
license = { file = "LICENSE" }

description = "Command-line interface for DICE"
readme = "README.md"

requires-python = ">=3.6"

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Development Status :: 1 - Planning",
]


dynamic = ["version"]
dependencies = [
  "colorama >=0.4.0",
  "dice-lib >=0.3.1",
  "tabulate >=0.8.9",
  "typer >=0.4.0",
  "typing_extensions >=3.7",
  "rich >=10.12.0",
  "shellingham >=1.4.0",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
]
dev = [
  "pytest >=6",
]
docs = [
  "Sphinx~=3.0",
  "myst_parser>=0.13",
  "sphinx-book-theme>=0.1.0",
  "sphinx_copybutton",
]

[project.urls]
homepage = "https://github.com/uobdic/dice-cli"


[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = ["error"]
testpaths = ["tests"]


[tool.pycln]
all = true


[tool.mypy]
files = "src"
python_version = "3.8"
warn_unused_configs = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# [[tool.mypy.overrides]] not working, setting this to false instead
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# mypy per-module options:

[[tool.mypy.overrides]]
module = "typer.*"
implicit_reexport = true



[tool.isort]
profile = "black"
known_third_party = ["typer", "click"]

[project.scripts]
dice = "dice_cli.main:main"
